// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expect <LayoutContainer> to render as full width 1`] = `
<div
  className="gds-layout__container gds-layout__container--full-width"
>
  <div>
    Content
  </div>
</div>
`;

exports[`Expect <LayoutContainer> to render properly 1`] = `
<div
  className="gds-layout__container"
>
  <div>
    Content
  </div>
</div>
`;
